telerun-out/0185619/compile-log.txt
/tmp/tmpoaq86b5x/source.cpp:140:17: error: use of undeclared identifier 'combined_or'
  140 |                 combined_or = 0;
      |                 ^
/tmp/tmpoaq86b5x/source.cpp:144:17: error: use of undeclared identifier 'combined_or'
  144 |                 combined_or |= mask_vecs[k]; // bitwise OR
      |                 ^
/tmp/tmpoaq86b5x/source.cpp:148:20: error: use of undeclared identifier 'combined_or'
  148 |             while (combined_or != 0) {
      |                    ^
/tmp/tmpoaq86b5x/source.cpp:201:17: error: use of undeclared identifier 'combined_or'
  201 |                 combined_or = 0;
      |                 ^
/tmp/tmpoaq86b5x/source.cpp:204:21: error: use of undeclared identifier 'combined_or'
  204 |                     combined_or |= mask_vecs[k]; // bitwise OR
      |                     ^
5 errors generated.
